--- a/L03_CSS_Basics/task2/index.html
+++ b/L03_CSS_Basics/task2/index.html
@@ -15,36 +15,30 @@
      	<section id="ex">
 			<a class="open_ex" href="#ex">
 		  		<figure class="office_block">
-		  		<img src="img/Austria.jpg" alt="">
+		  		<img src="img/Italy.jpg" alt="">
 			 		<figcaption>
-			 		<p class="country_name">Austria</p>
-			 		<p class="city_num">3</p>
+			 		<p class="country_name">Italy</p>
+			 		<p class="city_num">2</p>
 			 		<p class="city">Cities</p>
 					</figcaption>
 		  		</figure>
 		  	</a>
-		  	<a class="close_ex" href="#main"></a>
-            <div class="white_block"></div> <!--without this block - expand_office block will be visible between countries block when we click on it and animation starts, its kind of hack :) -->
+		  	 <a class="close_ex" href="#main"></a>
+             <div class="white_block"></div> <!--without this block - expand_office block will be visible between countries block when we click on it and animation starts, its kind of hack :) -->
         	   <div class="expand_offices">
                  <p class="expand_city_name">ITALY</p>
                 <div class="city_block">
                 <p class="office_name">Milano</p>
-                <span class="office_desc">Corvin Offices I.
-                    Futó street 47-53,
-                    Budapest, H-1082
-                    Italy</span>
+                <span class="office_desc">Piazza del Duomo, 20122 Milano, Italy</span>
                 <a href="#">Map >></a>
-                <span class="office_phone">P:+36-1-327-7400</span>
+                <span class="office_phone">P:+39-02-63-151</span>
                 </div>
                    
                 <div class="city_block">
                 <p class="office_name">Rome</p>
-                <span class="office_desc">Corvin Offices I.
-                    Futó street 47-53,
-                    Budapest, H-1082
-                    Italy</span>
+                <span class="office_desc">Piazza del Colosseo, 1, 00184 Roma, Italy</span>
                 <a href="#">Map >></a>
-                <span class="office_phone">P:+36-1-327-7400</span>
+                <span class="office_phone">P:+39-06-3996-7700</span>
                 </div>
                </div>
         </section>
@@ -119,9 +113,9 @@
 			</figcaption>
 		</figure>
 		<figure class="office_block">
-		<img src="img/Italy.jpg" alt="">
+		<img src="img/Austria.jpg" alt="">
 			<figcaption>
-			<p class="country_name">Italy</p>
+			<p class="country_name">Austria</p>
 			<p class="city_num">2</p>
 			<p class="city">Cities</p>
 			</figcaption>
