--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <ul>
       <li>L02 HTML homework</li>
       <ul>
-        <li><a href="02_html/task1/index.html">Homework</a></li>
+        <li><a href="L02_HTML/index.html">Homework</a></li>
       </ul>
       <li>L03 CSS Basics</li>
       <ul>
-        <li><a href="03_css-basics/task1/index.html">Homework: Task 1 (Epam Logo)</a></li>
-        <li><a href="03_css-basics/task2/index.html">Homework: Task 2 (Countries page)</a></li>
+        <li><a href="L03_CSS_Basics/task1/index.html">Homework: Task 1 (Epam Logo)</a></li>
+        <li><a href="L03_CSS_Basics/task2/index.html">Homework: Task 2 (Countries page)</a></li>
       </ul>
       <li>L04 CSS Layouts</li>
       <ul>
