--- a/L03_CSS_Basics/task2/index.html
+++ b/L03_CSS_Basics/task2/index.html
@@ -29,16 +29,16 @@
                  <p class="expand_city_name">ITALY</p>
                 <div class="city_block">
                 <p class="office_name">Milano</p>
-                <span class="office_desc">Piazza del Duomo, 20122 Milano, Italy</span>
-                <a href="#">Map >></a>
+                <span class="office_desc">Via Borgonuovo 18, Milano, Italy</span>
+                <a href="https://www.google.com/maps/place/Emmegi+Servizi+Immobiliari+Snc/@45.4717878,9.189919,19z/data=!4m13!1m7!3m6!1s0x4786c1493f1275e7:0x3cffcd13c6740e8d!2sMilan,+Italy!3b1!8m2!3d45.4654219!4d9.1859243!3m4!1s0x4786c6b38cc93155:0xb8cdf7743e68421d!8m2!3d45.4717869!4d9.1904675?hl=en" target="_blank">Map >></a>
                 <span class="office_phone">P:+39-02-63-151</span>
                 </div>
                    
                 <div class="city_block">
                 <p class="office_name">Rome</p>
-                <span class="office_desc">Piazza del Colosseo, 1, 00184 Roma, Italy</span>
-                <a href="#">Map >></a>
-                <span class="office_phone">P:+39-06-3996-7700</span>
+                <span class="office_desc">Via Sommacampagna 8, Roma, Italy</span>
+                <a href="https://www.google.com/maps/place/Via+Sommacampagna,+8,+00185+Roma,+Italy/@41.905832,12.5043063,19z/data=!4m12!1m6!3m5!1s0x132f610a9eb4a7d9:0x8d4ef92eefd92e99!2sRoma+Office+Sharing+-+Uffici+arredati!8m2!3d41.905651!4d12.5045!3m4!1s0x132f610a83dd37db:0x2829ccdfbefafb54!8m2!3d41.9058448!4d12.5043931?hl=en" target="_blank">Map >></a>
+                <span class="office_phone">P:+39-06-39-770</span>
                 </div>
                </div>
         </section>
