hw3 was changed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
       </ul>
       <li>L04 CSS Layouts</li>
       <ul>
-        <li><a href="04_css-layouts/task1/index.html">Task 1</a></li>
+        <li>Task 1:
+           <ul>
+               <li><a href="L04_CSS_Layouts/task1/normal/index.html">Normal</a></li>
+               <li><a href="L04_CSS_Layouts/task1/flex_box/index.html">Flex-Box</a></li>
+               <li><a href="L04_CSS_Layouts/task1/grid/index.html">Grid</a></li>
+           </ul>
+        </li>
         <li><a href="04_css-layouts/task2/index.html">Task 2</a></li>
       </ul>
     </ul>
