task 2 almost done

--- a/L03_CSS_Layouts/task1/flex_box/index.html
+++ b/L03_CSS_Layouts/task1/flex_box/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<main>
+<div class="container">
     <nav>
      <p>&lt;nav&gt;</p>
+        <ul>
          <li>&lt;li&gt;</li>
          <li>&lt;li&gt;</li>
          <li>&lt;li&gt;</li>
@@ -19,10 +20,12 @@
           </ul>
          <li>&lt;li&gt;</li>
          <li>&lt;li&gt;</li>
+         </ul>
     </nav>
     
-    <secton class="right_main">
-        <header>&lt;header&gt;</header>
+    <article class="right_main">
+        <header><h4>&lt;header&gt;</h4></header>
+        <div class="under_header">
         <div class="right_main_left">
             <section>
                 <figure>&lt;img&gt;</figure>
@@ -38,12 +41,15 @@
                 <figure>&lt;img&gt;</figure>
                 <figure>&lt;img&gt;</figure>
             </section>
-            <article>&lt;article&gt;</article>
-            <article>&lt;article&gt;</article>
+            <div class="main_article">
+            <article><h4>&lt;article&gt;</h4></article>
+            <article><h4>&lt;article&gt;</h4></article>
+            </div>
             <footer>&lt;footer&gt;</footer>
         </div>
         <aside>&lt;aside&gt;</aside>
-    </secton>
-</main>
+        </div>
+    </article>
+</div>
 </body>
 </html>
