--- a/L03_CSS_Layouts/task1/grid/index.html
+++ b/L03_CSS_Layouts/task1/grid/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<main>
-    <nav>
+<div class="container">
+    <ul>
      <p>&lt;nav&gt;</p>
          <li>&lt;li&gt;</li>
          <li>&lt;li&gt;</li>
@@ -19,7 +19,7 @@
           </ul>
          <li>&lt;li&gt;</li>
          <li>&lt;li&gt;</li>
-    </nav>
+    </ul>
     
     <secton class="right_main">
         <header>&lt;header&gt;</header>
@@ -44,6 +44,6 @@
         </div>
         <aside>&lt;aside&gt;</aside>
     </secton>
-</main>
+</div>
 </body>
 </html>
