--- a/L03_CSS_Layouts/task2/index.html
+++ b/L03_CSS_Layouts/task2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Homework 3</title>
+	<title>Homework 3 Task 2</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
