--- a/L03_CSS_Layouts/task1/grid/index.html
+++ b/L03_CSS_Layouts/task1/grid/index.html
@@ -2,48 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Task1</title>
+    <title>Grid</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="container">
-    <ul>
-     <p>&lt;nav&gt;</p>
-         <li>&lt;li&gt;</li>
-         <li>&lt;li&gt;</li>
-         <li>&lt;li&gt;</li>
-          <ul>
-              <p>&lt;ul&gt;</p>
-              <li>&lt;li&gt;</li>
-              <li>&lt;li&gt;</li>
-          </ul>
-         <li>&lt;li&gt;</li>
-         <li>&lt;li&gt;</li>
-    </ul>
-    
-    <secton class="right_main">
-        <header>&lt;header&gt;</header>
-        <div class="right_main_left">
-            <section>
-                <figure>&lt;img&gt;</figure>
-                <figure>&lt;img&gt;</figure>
-                <figure>&lt;img&gt;</figure>
-                <figure>&lt;img&gt;</figure>
-                <figure>&lt;img&gt;</figure>
-                <figure>&lt;img&gt;</figure>
-                <figure>&lt;img&gt;</figure>
-                <figure>&lt;img&gt;</figure>
-                <figure>&lt;img&gt;</figure>
-                <figure>&lt;img&gt;</figure>
-                <figure>&lt;img&gt;</figure>
-                <figure>&lt;img&gt;</figure>
-            </section>
-            <article>&lt;article&gt;</article>
-            <article>&lt;article&gt;</article>
-            <footer>&lt;footer&gt;</footer>
-        </div>
-        <aside>&lt;aside&gt;</aside>
-    </secton>
-</div>
+    <div class="grid">
+        <nav class="nav">&lt;nav&gt;
+        <ul>
+            <li>&lt;li&gt;</li>
+            <li>&lt;li&gt;</li>
+            <li>&lt;li&gt;</li>
+        </ul>
+        <ul>&lt;ul&gt;
+            <li>&lt;li&gt;</li>
+            <li>&lt;li&gt;</li>
+        </ul>
+        <ul>
+            <li>&lt;li&gt;</li>
+        </ul>
+        </nav>
+        <header class="header">&lt;header&gt;</header>
+            <div class="imgs imgs_grid">
+                <figure><img src="" alt="">&lt;img&gt;</figure>
+                <figure><img src="" alt="">&lt;img&gt;</figure>
+                <figure><img src="" alt="">&lt;img&gt;</figure>
+                <figure><img src="" alt="">&lt;img&gt;</figure>
+                <figure><img src="" alt="">&lt;img&gt;</figure>
+                <figure><img src="" alt="">&lt;img&gt;</figure>
+                <figure><img src="" alt="">&lt;img&gt;</figure>
+                <figure><img src="" alt="">&lt;img&gt;</figure>
+                <figure><img src="" alt="">&lt;img&gt;</figure>
+                <figure><img src="" alt="">&lt;img&gt;</figure>
+                <figure><img src="" alt="">&lt;img&gt;</figure>
+                <figure><img src="" alt="">&lt;img&gt;</figure>
+            </div>
+            <article class="article1">&lt;article&gt;</article>
+            <article class="article2">&lt;article&gt;</article>
+            <footer class="footer">&lt;footer&gt;</footer>
+        <aside class="aside">&lt;aside&gt;</aside>
+    </div>
 </body>
 </html>
