--- a/L03_CSS_Layouts/task1/grid/index.html
+++ b/L03_CSS_Layouts/task1/grid/index.html
@@ -23,18 +23,18 @@
         </nav>
         <header class="header">&lt;header&gt;</header>
             <div class="imgs imgs_grid">
-                <figure><img src="" alt="">&lt;img&gt;</figure>
-                <figure><img src="" alt="">&lt;img&gt;</figure>
-                <figure><img src="" alt="">&lt;img&gt;</figure>
-                <figure><img src="" alt="">&lt;img&gt;</figure>
-                <figure><img src="" alt="">&lt;img&gt;</figure>
-                <figure><img src="" alt="">&lt;img&gt;</figure>
-                <figure><img src="" alt="">&lt;img&gt;</figure>
-                <figure><img src="" alt="">&lt;img&gt;</figure>
-                <figure><img src="" alt="">&lt;img&gt;</figure>
-                <figure><img src="" alt="">&lt;img&gt;</figure>
-                <figure><img src="" alt="">&lt;img&gt;</figure>
-                <figure><img src="" alt="">&lt;img&gt;</figure>
+                <figure>&lt;img&gt;</figure>
+                <figure>&lt;img&gt;</figure>
+                <figure>&lt;img&gt;</figure>
+                <figure>&lt;img&gt;</figure>
+                <figure>&lt;img&gt;</figure>
+                <figure>&lt;img&gt;</figure>
+                <figure>&lt;img&gt;</figure>
+                <figure>&lt;img&gt;</figure>
+                <figure>&lt;img&gt;</figure>
+                <figure>&lt;img&gt;</figure>
+                <figure>&lt;img&gt;</figure>
+                <figure>&lt;img&gt;</figure>
             </div>
             <article class="article1">&lt;article&gt;</article>
             <article class="article2">&lt;article&gt;</article>
