--- a/L03_CSS_Layouts/task2/index.html
+++ b/L03_CSS_Layouts/task2/index.html
@@ -28,7 +28,7 @@
     <div class="about_block_inside_wrapper">
         <article class="about_block_inside">
             <h3>Who are you and what do you do?</h3>
-            <p>Use All Five is a Los Angeles-based studio started in 2006 by Levi         Brooks and Jason Farrell. We’re currently a team of fifteen <designe></designe>rs,     developers, and strategists.</p>
+            <p>Use All Five is a Los Angeles-based studio started in 2006 by Levi         Brooks and Jason Farrell. We’re currently a team of fifteen designers,     developers, and strategists.</p>
     
             <p>We help organizations and brands achieve greater impact through strategy, design, and technology.</p>
         </article>
@@ -36,6 +36,7 @@
 
 <article class="second_block">
     <div class="second_block_inside_text1">
+       <img src="img/arrow_right.png" alt="">
         <h3>Our work is collaborative. It explores new perspectives, flexes under pressure, and is driven by radical curiosity.</h3>
     </div>
     <figure class="second_block_inside_imgs">
@@ -251,7 +252,7 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
-   <section class="bottom_info">
+   <div class="bottom_info">
     <div class="bottom_info_inside">
      <article class="address_wrapper">
       <h4 class="address">
@@ -274,7 +275,7 @@
     </aside>
    </div>
     <p class="copy">©2017 Use All Five. All Rights Reserved.</p>
-   </section>
+   </div>
 </footer>
 </main>
 </div>
