--- a/L03_CSS_Layouts/task2/index.html
+++ b/L03_CSS_Layouts/task2/index.html
@@ -238,6 +238,7 @@
         </figure>
     </div>
     <div class="questions">
+    <!--QUASTIONS LINK-->
     <p class="questions_inside"><a href="">Questions? Get in Touch!</a></p>
     </div>
 </div>
