--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         </li>
         <li><a href="L03_CSS_Layouts/task2/index.html">Task 2</a></li>
       </ul>
+      <li>L04 CSS Responsive</li>
+      <ul>
+        <li><a href="L04_Responsive/task/index.html">Task</a></li>
+      </ul>
     </ul>
   </nav>
 </body>
