--- a/L04_Responsive/task/index.html
+++ b/L04_Responsive/task/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 	<title>Hometask</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,10 +13,10 @@
 		    <h4 class="epam">epam</h4>
 		    <nav class="menu_block">
 		        <ul class="menu">
-		            <li><a href="">Solutions</a></li>
-		            <li><a href="">About</a></li>
-		            <li><a href="">Careers</a></li>
-		            <li><a href="">Contact</a></li>
+		            <li><a href="#">Solutions</a></li>
+		            <li><a href="#">About</a></li>
+		            <li><a href="#">Careers</a></li>
+		            <li><a href="#">Contact</a></li>
 		        </ul>
 		    </nav>
 		  </div>
@@ -35,6 +36,7 @@
 		                <h4 class="name">EPAM Acquires Alliance Global Services</h4>
 		                <p class="desc">Increases Global Product Development Capabilities</p>
 		            </figcaption>
+		            <a href="#" class="block_link"></a>
 		        </figure>
 		        <figure class="block">
                     <div class="img_wrapper">
@@ -44,6 +46,7 @@
 		                <h4 class="name">Q2 2015 Earnings Results Date Announced</h4>
 		                <p class="desc">Results will be released on August 5, 2015</p>
 		            </figcaption>
+		            <a href="#" class="block_link"></a>
 		        </figure>
 		        <figure class="block">
                     <div class="img_wrapper">
@@ -62,6 +65,7 @@
 		                <h4 class="name">Top 25 IT-companies in Ukraine, July 2015</h4>
 		                <p class="desc">Growth recovery and a new leader</p>
 		            </figcaption>
+		            <a href="#" class="block_link"></a>
 		        </figure>
 		        <figure class="block">
                     <div class="img_wrapper">
@@ -80,15 +84,16 @@
 		                <h4 class="name">User Friendly 2015</h4>
 		                <p class="desc">Stop by our Booth #2 to learn more about recent initiatives launched across the UX domain</p>
 		            </figcaption>
+		            <a href="#" class="block_link"></a>
 		        </figure>
 		    </article>
 		</main>
 		<footer>
           <div class="footer_inside">
 		  <ul class="footer_info">
-		      <li><a href="">Investor Relations</a></li>
-		      <li><a href="">Contact</a></li>
-		      <li><a href="">Privacy Policy</a></li>
+		      <li><a href="#">Investor Relations</a></li>
+		      <li><a href="#">Contact</a></li>
+		      <li><a href="#">Privacy Policy</a></li>
 		  </ul>
 		  <p class="footer_copy">© 2015 EPAM Systems. All Rights Reserved.</p>
 		  </div>
