--- a/L04_Responsive/task/index.html
+++ b/L04_Responsive/task/index.html
@@ -27,66 +27,66 @@
 		  </figure>
 		</header>
 		<main class="main_block">
-		    <article class="blocks">
-		        <figure class="block">
+		    <div class="blocks">
+		        <article class="block">
                     <div class="img_wrapper">
 		              <img src="img/01.jpg" alt="">
 		            </div>
-		            <figcaption class="block_desc">
+		            <div class="block_desc">
 		                <h4 class="name">EPAM Acquires Alliance Global Services</h4>
 		                <p class="desc">Increases Global Product Development Capabilities</p>
-		            </figcaption>
+		            </div>
 		            <a href="#" class="block_link"></a>
-		        </figure>
-		        <figure class="block">
+		        </article>
+		        <article class="block">
                     <div class="img_wrapper">
 		              <img src="img/02.jpg" alt="">
 		            </div>
-		            <figcaption class="block_desc">
+		            <div class="block_desc">
 		                <h4 class="name">Q2 2015 Earnings Results Date Announced</h4>
 		                <p class="desc">Results will be released on August 5, 2015</p>
-		            </figcaption>
+		            </div>
 		            <a href="#" class="block_link"></a>
-		        </figure>
-		        <figure class="block">
+		        </article>
+		        <article class="block">
                     <div class="img_wrapper">
 		              <img src="img/03.jpg" alt="">
 		            </div>
-		            <figcaption class="block_desc">
+		            <div class="block_desc">
 		                <h4 class="name">EPAM Acquires NavigationArts</h4>
 		                <p class="desc">Expands Digital Engagement Practice</p>
-		            </figcaption>
-		        </figure>
-		        <figure class="block">
+		            </div>
+		        </article>
+		        <article class="block">
                     <div class="img_wrapper">
 		              <img src="img/04.jpg" alt="">
 		            </div>
-		            <figcaption class="block_desc">
+		            <div class="block_desc">
 		                <h4 class="name">Top 25 IT-companies in Ukraine, July 2015</h4>
 		                <p class="desc">Growth recovery and a new leader</p>
-		            </figcaption>
+		            </div>
 		            <a href="#" class="block_link"></a>
-		        </figure>
-		        <figure class="block">
+		        </article>
+		        <article class="block">
                     <div class="img_wrapper">
 		              <img src="img/05.jpg" alt="">
 		            </div>
-		            <figcaption class="block_desc">
+		            <div class="block_desc">
 		                <h4 class="name">German-Ukrainian Business Forum</h4>
 		                <p class="desc">Learn why Ukraine is a perfect sourcing location for IT services</p>
-		            </figcaption>
-		        </figure>
-		        <figure class="block">
+		            </div>
+		        </article>
+		        <article class="block">
                     <div class="img_wrapper">
 		              <img src="img/06.jpg" alt="">
 		            </div>
-		            <figcaption class="block_desc">
+		            <div class="block_desc">
 		                <h4 class="name">User Friendly 2015</h4>
 		                <p class="desc">Stop by our Booth #2 to learn more about recent initiatives launched across the UX domain</p>
-		            </figcaption>
+		            </div>
 		            <a href="#" class="block_link"></a>
-		        </figure>
-		    </article>
+		        </article>
+		    </div>
 		</main>
 		<footer>
           <div class="footer_inside">
