--- a/L04_Responsive/task/index.html
+++ b/L04_Responsive/task/index.html
@@ -75,6 +75,7 @@
 		                <h4 class="name">German-Ukrainian Business Forum</h4>
 		                <p class="desc">Learn why Ukraine is a perfect sourcing location for IT services</p>
 		            </div>
+		            <a href="#" class="block_link"></a>
 		        </article>
 		        <article class="block">
                     <div class="img_wrapper">
