--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       <ul>
         <li><a href="L04_Responsive/task/index.html">Task</a></li>
       </ul>
+      <li>L05 Optimization</li>
+      <ul>
+          <li><a href="L05_Optimization/index.html">Task</a></li>
+      </ul>
     </ul>
   </nav>
 </body>
