--- a/L05_Optimization/index.html
+++ b/L05_Optimization/index.html
@@ -1,6 +1,5 @@
-
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
     <title>Optimization. Epam Lab</title>
