--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       <ul>
           <li><a href="L05_Optimization/index.html">Task</a></li>
       </ul>
+      <li>L06 Preprocessors</li>
+      <ul>
+          <li><a href="L06_Preprocessors/index.html">Task</a></li>
+      </ul>
     </ul>
   </nav>
 </body>
