--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
       <ul>
           <li><a href="L06_Preprocessors/index.html">Task</a></li>
       </ul>
+      <li>L07 CSS_frameworks</li>
+      <ul>
+          <li><a href="L07_CSS_frameworks/index.html">Task</a></li>
+      </ul>
     </ul>
   </nav>
 </body>
