--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
   <title>Front-End RD Lab#7</title>
 </head>
 <body>
-  <header>
-    <h1>HomeWork exercises</h1>
+<style>
+  *{
+    font-family: Arial;
+    font-size: 14px;
+  }
+
+  header h1{
+    text-align: center;
+    font-size: 25px;
+  }
+
+  a{
+    color: #2e679e;
+  }
+
+  a:hover{
+    color: red;
+  }
+
+  ul{
+    font-weight: 700;
+    list-style: charset;
+  }
+</style>
+    <header>
+    <h1>HOMEWORK exercises</h1>
     </header>
   <nav>
     <ul>
@@ -45,6 +69,12 @@
       <li>L07 CSS_frameworks</li>
       <ul>
           <li><a href="L07_CSS_frameworks/index.html">Task</a></li>
+      </ul>
+      <hr>
+      <li>L08 JS_Intro</li>
+      <ul>
+          <li><a href="L08_JS_intro/index1.html">Task 1</a></li>
+          <li><a href="L08_JS_intro/index2.html">Task 2</a></li>
       </ul>
     </ul>
   </nav>
