--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   ul{
     font-weight: 700;
-    list-style: charset;
+    list-style: none;
   }
 </style>
     <header>
@@ -73,8 +73,8 @@
       <hr>
       <li>L08 JS_Intro</li>
       <ul>
-          <li><a href="L08_JS_intro/index1.html">Task 1</a></li>
-          <li><a href="L08_JS_intro/index2.html">Task 2</a></li>
+          <li><a href="L08_JS_intro/task1.html">Task 1</a></li>
+          <li><a href="L08_JS_intro/task2.html">Task 2</a></li>
       </ul>
     </ul>
   </nav>
