--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
           <li><a href="L08_JS_intro/task1.html">Task 1</a></li>
           <li><a href="L08_JS_intro/task2.html">Task 2</a></li>
       </ul>
+      <li>L09 JS_Control_Flow</li>
+      <ul>
+          <li><a href="L09_Control_flow/task1.html">Task 1</a></li>
+          <li><a href="L09_Control_flow/task2.html">Task 2</a></li>
+      </ul>
     </ul>
   </nav>
 </body>
