--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
           <li><a href="L09_Control_flow/task1.html">Task 1</a></li>
           <li><a href="L09_Control_flow/task2.html">Task 2</a></li>
       </ul>
+      <li>L09 JS_Functions</li>
+      <ul>
+          <li><a href="L10_Functions/js/guessingGame.js">GuessingGame</a></li>
+          <li><a href="L10_Functions/js/getClosestToZero.js">getClosestToZero</a></li>
+          <li><a href="L10_Functions/js/getMin.js">getMin</a></li>
+          <li><a href="L10_Functions/js/isBigger.js">isBigger</a></li>
+          <li><a href="L10_Functions/js/isPrime.js">isPrime</a></li>
+          <li><a href="L10_Functions/js/isSmaller.js">isSmaller</a></li>
+      </ul>
     </ul>
   </nav>
 </body>
