--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
       </ul>
       <li>L09 JS_Functions</li>
       <ul>
-          <li><a href="L10_Functions/js/guessingGame.js">GuessingGame</a></li>
-          <li><a href="L10_Functions/js/getClosestToZero.js">getClosestToZero</a></li>
-          <li><a href="L10_Functions/js/getMin.js">getMin</a></li>
-          <li><a href="L10_Functions/js/isBigger.js">isBigger</a></li>
-          <li><a href="L10_Functions/js/isPrime.js">isPrime</a></li>
-          <li><a href="L10_Functions/js/isSmaller.js">isSmaller</a></li>
+          <li><a href="L10_Functions/guessingGame.html">GuessingGame</a></li>
+          <li><a href="L10_Functions/isSmaller.html">isSmaller</a></li>
+          <li><a href="L10_Functions/getMin.html">getMin</a></li>
+          <li><a href="L10_Functions/isBigger.html">isBigger</a></li>
+          <li><a href="L10_Functions/isPrime.html">isPrime</a></li>
+          <li><a href="L10_Functions/getClosestToZero.html">getClosestToZero</a></li>
       </ul>
     </ul>
   </nav>
