--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
   *{
     font-family: Arial;
-    font-size: 14px;
+    font-size: 15px;
   }
 
   header h1{
@@ -89,6 +89,15 @@
           <li><a href="L10_Functions/isBigger.html">isBigger</a></li>
           <li><a href="L10_Functions/isPrime.html">isPrime</a></li>
           <li><a href="L10_Functions/getClosestToZero.html">getClosestToZero</a></li>
+      </ul>
+      <li>L11 JS_Datatypes</li>
+      <ul>
+          <li><a href="L11_Datatypes/homework/index.html">Link to Homework</a></li>
+          <li><a href="L11_Datatypes/practice/index.html">Link to Practice</a></li>
+      </ul>
+      <li>L12 JS_BOM</li>
+      <ul>
+          <li><a href="L12_BOM/index.html">Link to Homework</a></li>
       </ul>
     </ul>
   </nav>
