--- a/L11_Datatypes/practice/index.html
+++ b/L11_Datatypes/practice/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+	<a href="js/objects.txt">Link to objects wich you can push in textarea and check how its work</a>
     <textarea name="" id="myTextAres" cols="30" rows="10"></textarea>
     <button onclick="getDataFromTextArea()">Submit</button>
     <script src="js/script.js"></script>
