--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
   *{
     font-family: Arial;
-    font-size: 15px;
+    font-size: 17px;
   }
 
   header h1{
@@ -98,6 +98,14 @@
       <li>L12 JS_BOM</li>
       <ul>
           <li><a href="L12_BOM/index.html">Link to Homework</a></li>
+      </ul>
+      <li>L13 Advanced Functions</li>
+      <ul>
+          <li><a href="L13_Advanced_Functions/index.html">Link to Homework</a></li>
+      </ul>
+      <li>L14 OOP</li>
+      <ul>
+          <li><a href="L14_OOP/index.html">Link to Homework</a></li>
       </ul>
     </ul>
   </nav>
