--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
       <ul>
           <li><a href="L14_OOP/index.html">Link to Homework</a></li>
       </ul>
+      <li>L15 Inheritance</li>
+      <ul>
+      <li><a href="L15_Inheritance/index.html">Link to Homework</a></li>
+      </ul>
+      <li>L16 Ecma Script 6</li>
+      <ul>
+      <li><a href="L16_ES6/">Link to Homework</a></li>
+      </ul>
     </ul>
   </nav>
 </body>
