--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </ul>
       <li>L16 Ecma Script 6</li>
       <ul>
-      <li><a href="L16_ES6/">Link to Homework</a></li>
+      <li><a href="L16_ES6">Link to Homework</a></li>
       </ul>
     </ul>
   </nav>
