--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
       <ul>
       <li><a href="https://github.com/AndrewTans/Epam_Lab/tree/master/L16_Ecma_Script6">Link to Homework</a></li>
       </ul>
+      <li>L17 DOM</li>
+      <ul>
+      <li><a href="L17_DOM/index.html">Link to Homework</a></li>
+      </ul>
     </ul>
   </nav>
 </body>
