--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
       <ul>
       <li><a href="L17_DOM/index.html">Link to Homework</a></li>
       </ul>
+      <li>L18 Node.js</li>
+      <ul>
+      <li><a href="https://github.com/AndrewTans/Epam_Lab/tree/master/L18_Node.js">Link to Homework</a></li>
+      </ul>
     </ul>
   </nav>
 </body>
