--- a/L19_AJAX/index.html
+++ b/L19_AJAX/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <div id="weather_block">
             <div id="nav_buttons">
-                <span class="prev">prev</span> |
-                <span class="next">next</span>
+                <button class="prev">prev</button> |
+                <button class="next">next</button>
             </div>
         </div>
     </div>
