--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
       <ul>
       <li><a href="L19_AJAX/index.html">Link to Homework</a></li>
       </ul>
+      <li>L20 JQuery</li>
+      <ul>
+      <li><a href="L20_JQuery/index.html">Link to Homework</a></li>
+      </ul>
     </ul>
   </nav>
 </body>
