--- a/index.html
+++ b/index.html
@@ -131,6 +131,21 @@
       <ul>
       <li><a href="L20_JQuery/index.html">Link to Homework</a></li>
       </ul>
+      </ul>
+      <li>L21 Tools</li>
+      <ul>
+      <li><a href="https://github.com/AndrewTans/Epam_Lab/tree/master/L21_Tools/FL7-L21-Andrew_Tantsiura">Link to Homework</a></li>
+      </ul>
+      </ul>
+      <li>L22 Patterns</li>
+      <ul>
+      <li><a href="L22_Patterns/index.html">Link to Homework</a></li>
+      </ul>
+      </ul>
+      <li>L23 Modules</li>
+      <ul>
+      <li><a href="L23_Modules/index.html">Link to Homework</a></li>
+      </ul>
     </ul>
   </nav>
 </body>
