--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
       <ul>
       <li><a href="L23_Modules/index.html">Link to Homework</a></li>
       </ul>
+      <li>L24 MVC</li>
+      <ul>
+      <li><a href="L24_MVC/index.html">Link to Homework</a></li>
+      </ul>
     </ul>
   </nav>
 </body>
