--- a/L25_Backbone/index.html
+++ b/L25_Backbone/index.html
@@ -27,7 +27,7 @@
 </div>
 
 
-	<script src="http://underscorejs.org/underscore-min.js"></script>
+	<script src="lib/underscore-min.js"></script>
 	<script src="lib/jquery-3.2.1.min.js"></script>
 	<script src="lib/bootstrap.min.js"></script>
 	<script src="lib/backbone-master/backbone-min.js"></script>
