--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
       <ul>
       <li><a href="L25_Backbone/index.html">Link to Practice</a></li>
       </ul>
+      <li>L26 AngularJS</li>
+      <ul>
+      <li>
+        <a href="https://github.com/AndrewTans/Epam_Lab/tree/master/L26_Angular/">Link to Homework</a>
+      </li>
+      </ul>
     </ul>
   </nav>
 </body>
